--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="https://unpkg.com/leaflet.glify@3.0.2/dist/glify-browser.js"></script>
     
     <!-- the plugin -->
-    <script src="../dist/leaflet-glify-layer.js"></script>
+    <script src="dist/leaflet-glify-layer.js"></script>
 
     <!-- for demo color scale only -->
     <script src="https://unpkg.com/chroma-js@2.0.3/chroma.js"></script>
